--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.3",
     "ilyabirman-likely": "^2.3.1",
     "jquery": "^3.3.1",
+    "jquery.mmenu": "^7.3.3",
     "modernizr": "^3.7.0",
     "popper.js": "^1.14.6"
   },
