--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jquery": "^3.3.1",
     "jquery.mmenu": "^7.3.3",
     "modernizr": "^3.7.0",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "swiper": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
